// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI Elements/Button Dangerous Button 1`] = `
<button
  className="text-lg px-4 py-2 font-sans transition cursor-pointer focus-offset focus:ring-error bg-white border border-error text-error hover:bg-error hover:bg-opacity-10"
  type="button"
  variant="dangerous"
>
  I am a dangerous button
</button>
`;

exports[`Storyshots UI Elements/Button Dangerous Disabled Button 1`] = `
<button
  className="text-lg px-4 py-2 font-sans transition cursor-default bg-white border border-error text-error"
  disabled={true}
  type="button"
  variant="dangerous"
>
  I am a dangerous disabled button
</button>
`;

exports[`Storyshots UI Elements/Button Default Button 1`] = `
<button
  className="text-lg px-4 py-2 font-sans transition cursor-pointer focus-offset focus:ring-blue bg-white border border-blue text-blue hover:bg-blue hover:bg-opacity-10"
  type="button"
>
  I am a button
</button>
`;

exports[`Storyshots UI Elements/Button Default Disabled Button 1`] = `
<button
  className="text-lg px-4 py-2 font-sans transition cursor-default bg-white border border-gray-400 text-gray-400"
  disabled={true}
  type="button"
>
  I am a default disabled button
</button>
`;

exports[`Storyshots UI Elements/Button Primary Button 1`] = `
<button
  className="text-lg px-4 py-2 font-sans transition cursor-pointer focus-offset focus:ring-blue bg-blue text-white hover:opacity-60"
  type="button"
  variant="primary"
>
  I am a primary button
</button>
`;

exports[`Storyshots UI Elements/Button Primary Disabled Button 1`] = `
<button
  className="text-lg px-4 py-2 font-sans transition cursor-default bg-gray-200 text-gray-400"
  disabled={true}
  type="button"
  variant="primary"
>
  I am a primary disabled button
</button>
`;
